--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@use-gesture/react": "^10.2.19"
   }
 }
